feat : 청바지 키워드 허용
- 청바지로 검색 시 데님바지 카테고리에 해당하는 아이템 조회.