@@ -10,6 +10,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -26,8 +27,12 @@ public class DBSearchEngine implements SearchEngine {
 
     @Override
     public List<Long> getSearchItemIds(String keyword) {
-        List<String> keywords = Arrays.stream(keyword.split(" ")).toList();
+        List<String> keywords = Arrays.stream(keyword.split(" ")).collect(Collectors.toList());
         List<Long> result = new ArrayList<>();
+
+        if (keywords.contains("청바지")) {
+            keywords.add("데님바지");
+        }
 
         for (String word : keywords) {
             List<Long> itemIds = itemRepository.getSearchItemIds(word)
